# GLiSE

./: .gitignore  GLiSE Usability Study.xlsx  PROVIDER_REFACTORING.md  QUICKSTART.md  README.md  SETTINGS_MIGRATION.md  app.py  pyproject.toml  settings.json.template
controller/: date_helpers.py  extract_github_repo_and_issues_for_training.py  queries_generate_split.py  search_execute_split.py  utils_tokens.py
data/: data.json
data/GLProvidersPrompts/: GitHubSearchIssuesPrompt.txt  GitHubSearchReposPrompt.txt  GooglePrompt.txt  StackExchangePrompt.txt
datasets - filtrated datasets/: filtered-github-issues.json  filtered-googles.json  filtered-stackoverflows.json
model/: GLProvider.py  LLMProvider.py  QueryGeneration.py  SearchResults.py  Settings.py  TierInfo.py
model/filtering/: __init__.py  base_strategy.py  github_issues_strategy.py  github_repos_strategy.py  google_strategy.py  stackoverflow_strategy.py
model/providers/: __init__.py  base_provider.py  github_issues_provider.py  github_repos_provider.py  google_provider.py  stackoverflow_provider.py
model_search_and_train_script/: all_models_train_and_test.py  github_issues_models_training.py  github_repository_models_training.py  google_models_training.py  stackoverflow_models_training.py
view/: generate_queries_form_window.py  results_window.py  search_results_window.py  settings_window.py
view/progress_windows/: filtering_progress_dialog.py  progress_dialog.py  search_progress_dialog.py
view/utils/: icon_helper.py  menu_bar.py  navigation_controller.py  result_details_panel.py
(+1020 files in other folders)
